--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #eee;
+    background-color: #b94242;
+    color: #fff;
 }
 
 article {
@@ -60,7 +61,8 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: #ccc;
+    color: #000;
     width: 100%;
     border-radius: 20px;
     padding: 20px;
@@ -72,4 +74,5 @@ footer {
     width: 100%;
     height: 100%;
     border-radius: 11px;
+    margin-bottom: 10px;
 }
